Add GraalVM native-image build support and Gateway Manager API
- Add graal-build-time dependency for Clojure native-image support
- Add native-image build task to build.clj
- Combine Standalone and Gateway Manager APIs for complete gateway listing
- Bump version to 0.7.4
- Update README with new build instructions